--- a/hit_hybrid_customization/views/account_move_views.xml
+++ b/hit_hybrid_customization/views/account_move_views.xml
@@ -8,7 +8,31 @@
             <field name="name">pg_account_view_move_form_inherit</field>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='partner_id']" position="after">
-                    <field name="site_id"/>
+                    <field name="site_id" options="{'no_create': True}"/>
+                    <!-- <field name="purchase_request_id" options="{'no_create': True}" domain="[('is_direct_payment', '=', True)]" attrs="{'invisible': [('move_type','!=','in_invoice')]}"/> -->
+                </xpath>
+                <xpath expr="//field[@name='partner_id']" position="attributes">
+                    <attribute name="force_save">1</attribute>
+                </xpath>
+                <xpath expr="//label[@for='ref']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <xpath expr="//field[@name='ref' and @nolabel='1']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <xpath expr="//field[@name='ref']" position="after">
+                    <field name="bill_reference" attrs="{'invisible':[('move_type', 'not in', ('in_invoice', 'in_receipt', 'in_refund'))]}"/>
+                </xpath>
+            </field>
+        </record>
+        <record id="pg_account_move_efaktur_form_view_inherited" model="ir.ui.view">
+            <field name="name">pg.account.move.efaktur.form.view.inherited</field>
+            <field name="model">account.move</field>
+            <field name="inherit_id" ref="l10n_id_efaktur.account_move_efaktur_form_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='l10n_id_tax_number']" position="after">
+                    <field name="tanggal_faktur_pajak" />
+                    <field name="tanggal_bukti_potong" />
                 </xpath>
             </field>
         </record>
