--- a/hit_hybrid_customization/views/pg_master_data_views.xml
+++ b/hit_hybrid_customization/views/pg_master_data_views.xml
@@ -39,6 +39,7 @@
                         </div>
                         <group>
                             <field name="company_id" />
+                            <field name="is_default" />
                         </group>
                     </sheet>
                 </form>
