--- a/hit_hybrid_customization/views/account_move_views.xml
+++ b/hit_hybrid_customization/views/account_move_views.xml
@@ -7,6 +7,10 @@
             <field name="model">account.move</field>
             <field name="name">pg_account_view_move_form_inherit</field>
             <field name="arch" type="xml">
+                <!-- Button helper please comment it again -->
+                <!-- <xpath expr="//button[@name='button_set_checked']" position="after">
+                    <button name="action_post" string="Post Helper" class="oe_highlight" type="object"/>
+                </xpath> -->
                 <xpath expr="//field[@name='partner_id']" position="after">
                     <field name="site_id" options="{'no_create': True}"/>
                     <!-- <field name="purchase_request_id" options="{'no_create': True}" domain="[('is_direct_payment', '=', True)]" attrs="{'invisible': [('move_type','!=','in_invoice')]}"/> -->
