--- a/hit_hybrid_customization/views/report_tax_views.xml
+++ b/hit_hybrid_customization/views/report_tax_views.xml
@@ -3,68 +3,66 @@
     <data>
         <record id="pg_tax_report_filter_search" model="ir.ui.view">
             <field name="name">pg.tax.report.filter.search</field>
-            <field name="model">account.move.line</field>
+            <field name="model">account.move</field>
             <field name="arch" type="xml">
                 <search string="Search Tax Report Items">
                     <field name="name" string="Journal Item" filter_domain="[
                         '|', '|', '|',
-                        ('name', 'ilike', self), ('ref', 'ilike', self), ('account_id', 'ilike', self), ('partner_id', 'ilike', self)]"/>
+                        ('name', 'ilike', self), ('ref', 'ilike', self), ('partner_id', 'ilike', self)]"/>
                     <field name="date"/>
-                    <field name="account_id"/>
                     <field name="partner_id"/>
-                    <field name="tax_ids" />
-                    <field name="tax_line_id" string="Originator Tax"/>
+                    <field name="tax_group_names" string="Originator Tax"/>
                     <separator/>
-                    <filter string="Unposted" name="unposted" domain="[('parent_state', '=', 'draft')]" help="Unposted Journal Items"/>
-                    <filter string="Posted" name="posted" domain="[('parent_state', '=', 'posted')]" help="Posted Journal Items"/>
+                    <filter string="Unposted" name="unposted" domain="[('state', '=', 'draft')]" help="Unposted Journal Items"/>
+                    <filter string="Posted" name="posted" domain="[('state', '=', 'posted')]" help="Posted Journal Items"/>
                     <separator/>
                     <filter string="Date" name="date" date="date"/>
                     <separator/>
                     <separator/>
                     <group expand="0" string="Group By">
-                        <filter string="Account" name="group_by_account" domain="[]" context="{'group_by': 'account_id'}"/>
                         <filter string="Partner" name="group_by_partner" domain="[]" context="{'group_by': 'partner_id'}"/>
-                        <filter string="Originator Tax" name="groupby_originator_tax" domain="[]" context="{'group_by': 'tax_line_id'}"/>
+                        <filter string="Originator Tax" name="groupby_originator_tax" domain="[]" context="{'group_by': 'tax_group_names'}" />
                     </group>
                 </search>
             </field>
         </record>
         <!-- Tax Report View -->
-        <record model="ir.ui.view" id="pg_tax_report_view">
+        <record model="ir.ui.view" id="pg_tax_account_move_view">
             <field name="name">pg.tax.report.view</field>
-            <field name="model">account.move.line</field>
+            <field name="model">account.move</field>
             <field eval="10" name="priority"/>
             <field name="arch" type="xml">
-                <tree default_order="date" create="0" edit="0" delete="0" duplicate="0">
-                    <field name="report_tax_totals_json" />
-                    <field name="date" string="Date" optional="show" />
-                    <field name="account_id" string="Account" optional="show" />
-                    <field name="partner_id" string="Partner" optional="show" />
+                <tree create="0" edit="0" delete="0" duplicate="0">
+                    <field name="report_tax_totals_json" invisible="1"/>
+                    <field name="has_tax_line_id" invisible="1"/>
+                    <field name="date" string="Date" optional="show" readonly="1"/>
+                    <field name="partner_id" string="Partner" optional="show" readonly="1"/>
                     <field name="bill_reference" string="Bill Reference" optional="show" />
                     <field name="ref" string="Reference" optional="show"/>
-                    <field name="tax_line_id" string="Originator Tax" optional="show" />
+                    <field name="tax_group_names" string="Originator Tax" optional="show" />
                     <field name="l10n_id_tax_number" string="Tax Number" optional="show" />
                     <field name="tanggal_faktur_pajak" optional="show" />
                     <field name="tanggal_bukti_potong" optional="show" />
                     <field name="tax_base_amount" string="Base Amount (DPP)" optional="show" />
-                    <field name="amount_tax" string="Amount Tax" optional="show"/>
-                    <field name="move_id" string="Journal Entry" optional="show"/>
+                    <field name="ppn_value" optional="show"/>
+                    <field name="pph_value" optional="show"/>
+                    <field name="name" string="Journal Entry" optional="show" readonly="1"/>
                 </tree>
             </field>
         </record>
         <!-- Tax Report Action -->
-        <record model="ir.actions.act_window" id="pg_tax_report_window_action">
+        <record model="ir.actions.act_window" id="pg_tax_report_account_move_window_action">
             <field name="name">Custom Tax Report</field>
-            <field name="res_model">account.move.line</field>
+            <field name="res_model">account.move</field>
             <field name="view_mode">tree,form</field>
-            <field name="view_id" ref="pg_tax_report_view"/>
+            <field name="view_id" ref="pg_tax_account_move_view"/>
             <field name="search_view_id" ref="pg_tax_report_filter_search"/>
-            <field name="domain">[('tax_line_id', '!=', False)]</field>
+            <field name="domain">[('has_tax_line_id', '=', True)]</field>
         </record>
         <!-- Tax Report Menu -->
-        <!-- <menuitem id="pg_tax_report_menu" name="Tax Report" parent="account.menu_finance_entries_management" action="pg_tax_report_window_action" /> -->
+        <menuitem id="pg_tax_report_menu" name="Tax Report" parent="account.menu_finance_entries_management" action="pg_tax_report_account_move_window_action" />
         <!-- Account Move Line View Helper -->
-        <!-- <record id="pg_account_view_move_line_form_inherited" model="ir.ui.view">
+        <record id="pg_account_view_move_line_form_inherited" model="ir.ui.view">
             <field name="name">pg.account.view.move.line.form.inherited</field>
             <field name="model">account.move.line</field>
             <field name="inherit_id" ref="account.view_move_line_form" />
@@ -74,9 +72,9 @@
             <field name="active" eval="True" />
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='quantity']" position="after">
-                    <field name="report_tax_totals_json" />
+                    <field name="report_tax_totals_json" invisible="1"/>
                 </xpath>
             </field>
-        </record> -->
+        </record>
     </data>
 </odoo>
