--- a/hit_hybrid_customization/views/account_payment_views.xml
+++ b/hit_hybrid_customization/views/account_payment_views.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data >
-        <!-- Form view for "model" -->
         <record id="hit_account_payment_view_model_form" model="ir.ui.view">
-            <field name="name">account.payment.view.model.form</field>
+            <field name="name">hit.account.payment.view.model.form</field>
             <field name="model">account.payment</field>
             <field name="inherit_id" ref="account.view_account_payment_form" />
             <field name="arch" type="xml">
@@ -13,6 +12,16 @@
                 <xpath expr="//field[@name='ref']" position="after">
                     <field name="account_move_id"/>
                     <field name="analytic_account_id" />
+                </xpath>
+            </field>
+        </record>
+        <record id="hit_account_payment_view_model_tree" model="ir.ui.view">
+            <field name="name">hit.account.payment.view.model.tree</field>
+            <field name="model">account.payment</field>
+            <field name="inherit_id" ref="account.view_account_payment_tree" />
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='state']" position="after">
+                    <field name="journal_payment_state" widget="badge" decoration-info="journal_payment_state == 'draft'" decoration-warning="journal_payment_state == 'reversed'" decoration-success="journal_payment_state == 'posted'" optional="show"/>
                 </xpath>
             </field>
         </record>
