[ECR] Accounting and Inventory.

--- a/hit_hybrid_customization/views/stock_quant_views.xml
+++ b/hit_hybrid_customization/views/stock_quant_views.xml
@@ -12,6 +12,8 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='user_id']" position="after">
                     <field name="analytic_account_id" />
+                    <field name="backdate_inventory" />
+                    <field name="accounting_date" />
                 </xpath>
             </field>
         </record>
