--- a/hit_hybrid_customization/views/account_move_views.xml
+++ b/hit_hybrid_customization/views/account_move_views.xml
@@ -59,6 +59,7 @@
             <field name="inherit_id" ref="l10n_id_efaktur.account_move_efaktur_form_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='l10n_id_tax_number']" position="after">
+                    <field name="l10n_id_tax_number_adjustable" />
                     <field name="tanggal_faktur_pajak" />
                     <field name="tanggal_bukti_potong" />
                 </xpath>
