--- a/hit_hybrid_customization/views/purchase_request_views.xml
+++ b/hit_hybrid_customization/views/purchase_request_views.xml
@@ -95,11 +95,15 @@
                 </xpath>
                 <xpath expr="//field[@name='line_ids']/form//field[@name='product_uom_id']" position="attributes">
                     <attribute name="options">{'no_create': True}</attribute>
-                    <attribute name="attrs">{"readonly": [["is_editable","=",False]]}</attribute>
+                    <attribute name="attrs">{"invisible": True}</attribute>
                     <attribute name="force_save">1</attribute>
+                </xpath>
+                <xpath expr="//field[@name='line_ids']/form//field[@name='product_uom_id']" position="after">
+                    <field name="uom_id_view"/>
                 </xpath>
                 <xpath expr="//field[@name='line_ids']/form//field[@name='analytic_account_id']" position="attributes">
                     <attribute name="options">{'no_create': True}</attribute>
+                    <attribute name="required">1</attribute>
                 </xpath>
                 <xpath expr="//field[@name='line_ids']/form//field[@name='date_required']" position="attributes">
                     <attribute name="string">Due Date</attribute>
