--- a/hit_hybrid_customization/views/stock_picking_views.xml
+++ b/hit_hybrid_customization/views/stock_picking_views.xml
@@ -38,6 +38,15 @@
             <field name="priority" eval="16" />
             <field name="active" eval="True" />
             <field name="arch" type="xml">
+                <xpath expr="//field[@name='date_done']" position="before">
+                    <div class="o_td_label">
+                        <label for="custom_backdate" string="Issue Date" style="font-weight:bold;"
+                                attrs="{'invisible': [('operation_category', 'not in', ['out', 'rev', 'int'])]}"/>
+                        <label for="custom_backdate" string="Receive Date" style="font-weight:bold;"
+                                attrs="{'invisible': [('operation_category', 'not in', ['in', 'ret'])]}"/>
+                    </div>
+                    <field name="custom_backdate" nolabel="1"/>
+                </xpath>
                 <xpath expr="//field[@name='picking_type_id']" position="after">
                     <field name="operation_category" invisible="1"/>
                     <field name="purchase_request_id" invisible="1"/>
@@ -50,7 +59,7 @@
                 </xpath>
                 <xpath expr="//field[@name='move_ids_without_package']//field[@name='product_id']" position="after">
                     <field name="id" invisible="1"/>
-                    <field name="analytic_account_id" attrs="{'column_invisible': [('parent.operation_category', 'not in', ('in', 'out'))]}"/>
+                    <field name="analytic_account_id" required="1" options="{'no_create': True}"/>
                 </xpath>
             </field>
         </record>
