--- a/hit_hybrid_customization/views/account_asset_views.xml
+++ b/hit_hybrid_customization/views/account_asset_views.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
+    
         <record id="pg_view_account_asset_purchase_tree_inherit" model="ir.ui.view">
             <field name="inherit_id" ref="account_asset.view_account_asset_purchase_tree"/>
             <field name="mode">extension</field>
@@ -14,5 +15,18 @@
                 </xpath>
             </field>
         </record>
+
+        <record id="pg_account_asset_view_form_inherit" model="ir.ui.view">
+            <field name="name">account.asset.view.form.inherit</field>
+            <field name="model">account.asset</field>
+            <field name="inherit_id" ref="account_asset.view_account_asset_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='account_analytic_id']" position="attributes">
+                    <attribute name="required">1</attribute>
+                    <attribute name="options">{'no_create': True}</attribute>
+                </xpath>
+            </field>
+        </record>
+
     </data>
 </odoo>
