--- a/hit_hybrid_customization/views/account_payment_views.xml
+++ b/hit_hybrid_customization/views/account_payment_views.xml
@@ -11,7 +11,7 @@
                 </xpath>
                 <xpath expr="//field[@name='ref']" position="after">
                     <field name="account_move_id"/>
-                    <field name="analytic_account_id" />
+                    <field name="analytic_account_id" required="1" options="{'no_create': True}"/>
                 </xpath>
             </field>
         </record>
