--- a/hit_hybrid_customization/views/purchase_order_views.xml
+++ b/hit_hybrid_customization/views/purchase_order_views.xml
@@ -33,6 +33,10 @@
                     <field name="discount" optional="show" />
                     <field name="discount_val" optional="show" />
                 </xpath>
+                <xpath expr="//field[@name='order_line']//field[@name='account_analytic_id']" position="attributes">
+                    <attribute name="required">1</attribute>
+                    <attribute name="options">{'no_create': True}</attribute>
+                </xpath>
                 <xpath expr="//field[@name='tax_totals_json']" position="after">
                     <field name="currency_id" invisible="1" />
                     <label for="total_discount" />
